# embycli

./: Cargo.toml  README.md
skills/embycli-playback/: SKILL.md
skills/embycli-playback/references/: playback-cookbook.md
src/: cli.rs  commands.rs  config.rs  emby.rs  main.rs  player.rs  prompt.rs
