[package]
name = "embycli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
clap_complete = "4.5.54"
dirs = "6.0.0"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
